--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,12 +2,13 @@
 .hero {
     padding-top: 64px;
     padding: 100px;
-    background-image: url(../images/fundo.png);
+    background-image: url(../images/birthday.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     height: 100%;
 
+    //orveley 
     .container {
         position: relative;
     }
@@ -38,15 +39,17 @@
     }
 
     @media (max-width: 640px) {
-        padding: 40px;
+        padding: 40px 0;
+        
         &__logo {
-            height: 40px;
+            height: 45px;
         }
 
         &__text {
-            font-size: 22px;
+            font-size: 24px;
             line-height: 24px;
             margin: 24px 0;
+            text-align: center;
         }
     }
 }
