--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,16 @@
 @use 'hero';
+@use './components/infos_bar';
+@use 'variables';
+@use 'components/buttons';
+@use 'event';
+
 
 * {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
-    color: #fff;
+    color: variables.$textColor;
+    list-style: none;
 }
 
 .container {
