--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,9 +1,34 @@
+@use 'variables';
+
+
 .event {
     padding: 80px 0;
-    background-image: linear-gradient(#e42929, #eb9797);
+
+    &--cake {
+        background-image: linear-gradient(variables.$blue1, variables.$blue2);
+    }
+
+    &--fest {
+        background-image: linear-gradient(variables.$blue2, variables.$pink);
+    }
+
+    &--local {
+        background-image: linear-gradient(variables.$pink, variables.$yellow);
+    }
+
+    &--celebration {
+        background-image: linear-gradient(variables.$yellow, variables.$pink);
+    }
+
+    &--image-left {
+        .container {
+            flex-direction: row-reverse;
+        }
+    }
 
     .container{
         display: flex;
+        gap: 40px;
     }
     
     &__image {
@@ -11,8 +36,6 @@
     }
 
     &__detail {
-        margin-right: 40px;
-
         &__title {
             font-size: 18px;
             font-weight: bold;
